Fix footer and services section responsiveness on Tablets

--- a/css/style.css
+++ b/css/style.css
@@ -183,10 +183,6 @@ header {
     transition: transform .5s ease-in;
 }
 
-.left img:hover {
-    transform: rotate(360deg);
-}
-
 nav {
     position: absolute;
     top: 100%;
@@ -199,8 +195,8 @@ nav {
     align-items: flex-end;
     transform: scaleY(0);
     padding: 1rem 2rem;
-    border-top: 0.2rem solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    border-top: 0.2rem solid rgb(0 0 0 / 20%);
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 10%);
     transform-origin: top;
 }
 
@@ -214,10 +210,6 @@ nav a {
     font-size: 1.5rem;
     text-decoration: none;
     transition: 0.4s ease-in-out;
-}
-
-nav a:hover {
-    color: #2ecc71;
 }
 
 input:checked ~ nav {
@@ -240,9 +232,8 @@ main {
 
 main section.intro {
     padding: 8rem 5rem 5rem;
-    background-color: #333;
-    background: linear-gradient(to right, #222222, #333333);
-    box-shadow: 0 2px 3px 0px #111;
+    background: linear-gradient(to right, #222, #333);
+    box-shadow: 0 2px 3px 0 #111;
     opacity: 0;
     animation: slide-in 1s 0.5s forwards;
 }
@@ -252,9 +243,10 @@ main section.intro {
         opacity: 0;
         transform: translateX(-12px);
     }
+
     to {
         opacity: 1;
-        transform: translateX(0px);
+        transform: translateX(0);
     }
 }
 
@@ -281,7 +273,7 @@ section.intro h3 {
 .aboutme, .services, .skills {
     background-color: #191919 ;
     margin: 1rem 0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 2px 4px rgb(0 0 0 / 40%);
 }
 
 .services, .project {
@@ -323,6 +315,7 @@ section.intro h3 {
     font-size: 4rem;
     margin-bottom: 2rem;
 }
+
 .about-text h5 {
     letter-spacing: 0.3rem;
     font-size: 1.4rem;
@@ -346,11 +339,26 @@ section.intro h3 {
 .project {
     width: 100%;
     border-radius: 7px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 4px rgb(0 0 0 / 20%);
 }
+
+.socials a{
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    margin: 22px 10px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+}
+
 .skills {
     background-color: #101010;
 }
+
 .title h2 {
     font-size: 1.3rem;
     width: fit-content;
@@ -388,7 +396,7 @@ section.intro h3 {
 
 .box .cards {
     background-color: #101010;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 2px 4px rgb(0 0 0 / 40%);
 }
 
 .card > p {
@@ -399,15 +407,18 @@ section.intro h3 {
 .box .skill-card {
     min-height: 350px;
 }
+
 .skill-card ol li {
     list-style-type: none;
 }
+
 .cardss ol li {
     list-style-type: square;
     text-align: left;
     padding: 5px 1px;
     font-size: 22px;
 }
+
 .card span {
     font-size: 50px;
     display: block;
@@ -420,9 +431,15 @@ ol li span.material-icons-outlined {
     color:#fcfc ;
 
 }
+
 .card h5 {
     font-size: 1.5rem;
     margin-bottom: auto;
+}
+
+
+nav a:hover {
+    color: #2ecc71;
 }
 
 .card p a {
@@ -435,56 +452,35 @@ ol li span.material-icons-outlined {
     border-radius: 30px;
     transition: 0.4s;
 }
-.card p a:hover {
-    background-color: transparent;
-    border: 2px solid #f9004d;
-    cursor: pointer;
-}
 
 .box #crud, .card {
     min-height: 450px;
 }
 
 footer{
-    position: relative;
-    width: 100%;
-    height: 250px;
-    display: flex;
-    flex-direction: column;
+    height: fit-content;
     background-color: #191919;
-    align-items: center;
-    justify-content: center;
+    padding: 1rem 0;
+}
 
+footer p:nth-child(1), footer p:nth-child(2), .socials, .end {
+    width: fit-content;
+    margin: auto;
 }
 
 footer p:nth-child(1){
     font-size: 30px;
-    margin-bottom: 20px;
     font-weight: bold;
+    margin-bottom: 20px;
 }
 
 footer p:nth-child(2){
     font-size: 17px;
-    width: 500px;
-    text-align: center;
     line-height: 1.4;
 }
 
 .socials{
     display: flex;
-}
-
-.socials a{
-    width: 45px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    margin: 22px 10px;
-    color: #fff;
-    text-decoration: none;
-    font-size: 20px;
 }
 
 .socials a > img {
@@ -493,27 +489,37 @@ footer p:nth-child(2){
     cursor: pointer;
 }
 
-.socials a:first-child img {
-    scale: 1.5;
-}
-
 .socials a:hover{
     transform: scale(1.3);
     transition: .3s;
 }
 
-.end{
-    position: absolute;
-    color: #f9004d;
-    bottom: 12px;
-    font-size: 14px
+.card p a:hover {
+    background-color: transparent;
+    border: 2px solid #f9004d;
+    cursor: pointer;
 }
 
-@media screen and (max-width: 330px) {
+.end{
+    color: #f9004d;
+    font-size: 14px;
+    margin: 1rem auto;
+}
+
+.left img:hover {
+    transform: rotate(360deg);
+}
+
+.socials a:first-child img {
+    scale: 1.5;
+}
+
+@media screen and (width <= 330px) {
     .left h1,
     label {
         font-size: 1rem;
     }
+
     .left img {
         width: 40px;
     }
@@ -521,7 +527,7 @@ footer p:nth-child(2){
     .card h5 {
         font-size: 1rem;
     }
-
+    
     main section.intro {
         padding: 3rem 1rem 2rem;
     }
@@ -536,7 +542,7 @@ footer p:nth-child(2){
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (width >= 768px) {
     label {
         visibility: hidden;
     }
@@ -559,7 +565,7 @@ footer p:nth-child(2){
     nav a:hover {
         color: wheat;
     }
-
+    
     section.intro h4 {
         color: #fcfc;
         letter-spacing: 0.3rem;
@@ -586,9 +592,8 @@ footer p:nth-child(2){
 
     .title h2 {
         font-size: 2rem;
-        /* width: 11rem;
-        margin: 2rem auto; */
     }
+
     .skill-title .skill {
         min-width: 400px;
         text-align: left;
@@ -598,9 +603,17 @@ footer p:nth-child(2){
         font-size: 1.6rem;
     }
 
+    .services {
+        background-color: inherit;
+    }
+
+    .box .cards {
+        background-color: #191919; 
+    }
+
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (width >= 992px) {
     .about-text {
         width: 50%;
     }
@@ -608,5 +621,14 @@ footer p:nth-child(2){
     .grid-box {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: 1fr;
+    }
+
+    .services {
+        background-color: #191919;
+    }
+
+    .box .cards {
+        background-color: #101010;
+        box-shadow: 0 2px 4px rgb(0 0 0 / 40%);
     }
 }
